--- a/src/components/forms/actions/ButtonsActions.module.scss
+++ b/src/components/forms/actions/ButtonsActions.module.scss
@@ -3,4 +3,8 @@
 .actions {
   @include flex-center;
   justify-content: space-between;
+
+  @media screen and (max-width: $phone) {
+    flex-direction: column;
+  }
 }
