--- a/src/components/forms/actions/ButtonsActions.module.scss
+++ b/src/components/forms/actions/ButtonsActions.module.scss
@@ -5,6 +5,6 @@
   justify-content: space-between;
 
   @media screen and (max-width: $phone) {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
 }
