--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -18,6 +18,7 @@
     height: 100%;
     padding: 1rem;
     border-radius: 0;
+    width: 101vw;
   }
 
   &__content {
@@ -34,6 +35,6 @@
 
 .title {
   font-size: 2rem;
-  ;
+  text-align: center;
   font-weight: 600;
 }
